sandbox/output
StringCalculator.java:16: error: non-static method valueOf(String) cannot be referenced from a static context
        return valueOf(numbers);
               ^
1 error
